--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -6,9 +6,113 @@
 			<button type="button" class="portfolio-button portfolio-button-next _icon-arrow-right" aria-label="Next button"></button>
 		</div>
 	</div>
-	<div class="portfolio__slider swiper">
-		<div class="portfolio__wrapper swiper-wrapper">
-			<!-- Portfolio slides go here -->
-		</div>
+	<div class="portfolio__slider swiper swiper-initialized swiper-horizontal swiper-backface-hidden">
+		<div class="portfolio__wrapper swiper-wrapper" style="transition-duration: 0ms; transform: translate3d(-2441.67px, 0px, 0px); transition-delay: 0ms;">
+			
+		<div class="portfolio__slide swiper-slide" data-swiper-slide-index="1" style="width: 463.333px; margin-right: 25px;">
+				<div class="portfolio__slide-contentainer">
+					<img src="images/portfolio-02.webp" alt="Здравоохранение">
+					<div class="portfolio__slide-content content-slide">
+						<div class="content-slide__details">
+							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+							<div class="content-slide__text">
+								<span>Здравоохранение</span>
+								<a href="#">Учреждения Здравоохранения</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div><div class="portfolio__slide swiper-slide" data-swiper-slide-index="2" style="width: 463.333px; margin-right: 25px;">
+				<div class="portfolio__slide-contentainer">
+					<img src="images/portfolio-03.webp" alt="">
+					<div class="portfolio__slide-content content-slide">
+						<div class="content-slide__details">
+							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+							<div class="content-slide__text">
+								<span>Здравоохранение</span>
+								<a href="#">Учреждения Здравоохранения</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div><div class="portfolio__slide swiper-slide" data-swiper-slide-index="3" style="width: 463.333px; margin-right: 25px;">
+				<div class="portfolio__slide-contentainer">
+					<img src="images/portfolio-04.webp" alt="">
+					<div class="portfolio__slide-content content-slide">
+						<div class="content-slide__details">
+							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+							<div class="content-slide__text">
+								<span>Здравоохранение</span>
+								<a href="#">Учреждения Здравоохранения</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div><div class="portfolio__slide swiper-slide" data-swiper-slide-index="4" style="width: 463.333px; margin-right: 25px;">
+				<div class="portfolio__slide-contentainer">
+					<img src="images/portfolio-01.webp" alt="Здравоохранение">
+					<div class="portfolio__slide-content content-slide">
+						<div class="content-slide__details">
+							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+							<div class="content-slide__text">
+								<span>Здравоохранение</span>
+								<a href="#">Учреждения Здравоохранения</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div><div class="portfolio__slide swiper-slide" data-swiper-slide-index="5" style="width: 463.333px; margin-right: 25px;">
+				<div class="portfolio__slide-contentainer">
+					<img src="images/portfolio-02.webp" alt="Здравоохранение">
+					<div class="portfolio__slide-content content-slide">
+						<div class="content-slide__details">
+							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+							<div class="content-slide__text">
+								<span>Здравоохранение</span>
+								<a href="#">Учреждения Здравоохранения</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div><div class="portfolio__slide swiper-slide swiper-slide-prev" data-swiper-slide-index="6" style="width: 463.333px; margin-right: 25px;">
+				<div class="portfolio__slide-contentainer">
+					<img src="images/portfolio-03.webp" alt="">
+					<div class="portfolio__slide-content content-slide">
+						<div class="content-slide__details">
+							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+							<div class="content-slide__text">
+								<span>Здравоохранение</span>
+								<a href="#">Учреждения Здравоохранения</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div><div class="portfolio__slide swiper-slide swiper-slide-active" data-swiper-slide-index="7" style="width: 463.333px; margin-right: 25px;">
+				<div class="portfolio__slide-contentainer">
+					<img src="images/portfolio-04.webp" alt="">
+					<div class="portfolio__slide-content content-slide">
+						<div class="content-slide__details">
+							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+							<div class="content-slide__text">
+								<span>Здравоохранение</span>
+								<a href="#">Учреждения Здравоохранения</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div><div class="portfolio__slide swiper-slide swiper-slide-next" data-swiper-slide-index="0" style="width: 463.333px; margin-right: 25px;">
+				<div class="portfolio__slide-contentainer">
+					<img src="images/portfolio-01.webp" alt="Здравоохранение">
+					<div class="portfolio__slide-content content-slide">
+						<div class="content-slide__details">
+							<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+							<div class="content-slide__text">
+								<span>Здравоохранение</span>
+								<a href="#">Учреждения Здравоохранения</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div></div>
 	</div>
 </section>
