--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -2,7 +2,45 @@
 	<div class="pricing__container">
 		<h2 class="pricing__title title">Понятные Тарифы</h2>
 		<ul class="pricing__items">
-			<!-- Pricing items go here -->
+			<li class="pricing__item">
+				<p class="pricing__package">Стартовый пакет</p>
+				<h3 class="pricing__plan">Базовый план</h3>
+				<p class="pricing__value"><span>$89</span> /Per monthly</p>
+				<ul class="pricing__details">
+					<li class="_icon-checked">Доступ к основным функциям</li>
+					<li class="_icon-checked">Хранилище объемом 5 ГБ</li>
+					<li class="_icon-checked">Поддержка электронной почты</li>
+					<li class="_icon-checked">Базовая аналитика</li>
+					<li class="_icon-checked">Доступ к форуму сообщества</li>
+				</ul>
+				<a href="#" class="pricing__button button _icon-arrow-up-right">Начать</a>
+			</li>
+			<li class="pricing__item active">
+				<p class="pricing__package">Пакет Развития</p>
+				<h3 class="pricing__plan">Стандартный план</h3>
+				<p class="pricing__value"><span>$129</span> /Per monthly</p>
+				<ul class="pricing__details">
+					<li class="_icon-checked">Доступ ко всем основным функциям</li>
+					<li class="_icon-checked">Хранилище объемом 50 ГБ</li>
+					<li class="_icon-checked">Приоритетная поддержка по электронной почте</li>
+					<li class="_icon-checked">Расширенная аналитика</li>
+					<li class="_icon-checked">Настраиваемая дашборд</li>
+				</ul>
+				<a href="#" class="pricing__button button _icon-arrow-up-right">Начать</a>
+			</li>
+			<li class="pricing__item">
+				<p class="pricing__package">Пакет Pro</p>
+				<h3 class="pricing__plan">Премиум-план</h3>
+				<p class="pricing__value"><span>$159</span> /Per monthly</p>
+				<ul class="pricing__details">
+					<li class="_icon-checked">Премиальные функции безопасности</li>
+					<li class="_icon-checked">Неограниченное хранилище</li>
+					<li class="_icon-checked">Круглосуточная поддержка по телефону и электронной почте</li>
+					<li class="_icon-checked">Базовая аналитика</li>
+					<li class="_icon-checked">Пользовательские опции брендинга</li>
+				</ul>
+				<a href="#" class="pricing__button button _icon-arrow-up-right">Начать</a>
+			</li>
 		</ul>
 	</div>
 </section>
