--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -5,7 +5,63 @@
 			<a href="#" class="projects__button button _icon-arrow-up-right">Все проекты</a>
 		</div>
 		<ul class="projects__slides">
-			<!-- Project slides go here -->
+			<li class="projects__slide">
+				<img src="images/portfolio-01.webp" alt="Project">
+				<div class="projects__slide-content content-slide">
+					<div class="content-slide__details">
+						<div class="content-slide__text">
+							<span>Здравоохранение</span>
+							<a href="#">Учреждения Здравоохранения</a>
+						</div>
+						<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+					</div>
+				</div>
+			</li>
+			<li class="projects__slide">
+				<img src="images/portfolio-02.webp" alt="Project">
+				<div class="projects__slide-content content-slide">
+					<div class="content-slide__details">
+						<div class="content-slide__text">
+							<span>Жилье</span>
+							<a href="#">Ремонт элитного дома</a>
+						</div>
+						<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+					</div>
+				</div>
+			</li>
+			<li class="projects__slide">
+				<img src="images/portfolio-03.webp" alt="Project">
+				<div class="projects__slide-content content-slide">
+					<div class="content-slide__details">
+						<div class="content-slide__text">
+							<span>Общественные места</span>
+							<a href="#">культурно-спортивный центр</a>
+						</div>
+						<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+					</div>
+				</div>
+			</li>
+			<li class="projects__slide">
+				<img src="images/portfolio-04.webp" alt="Project">
+				<div class="projects__slide-content content-slide">
+					<div class="content-slide__details">
+						<div class="content-slide__text">
+							<span>Промышленность</span>
+							<a href="#">Промышленный склад</a>
+						</div>
+						<a href="#" class="content-slide__icon _icon-arrow-up-right"></a>
+					</div>
+				</div>
+			</li>
 		</ul>
 	</div>
+	<!-- <div class="projects__container">
+		<div class="projects__title-wrapper">
+			<h2 class="projects__title title">Наши Завершенные Проекты</h2>
+			<a href="#" class="projects__button button _icon-arrow-up-right">Все проекты</a>
+		</div>
+		<ul class="projects__slides">
+			Project slides go here
+		</ul>
+	</div> -->
 </section>
