--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -2,10 +2,75 @@
 	<div class="reviews__container">
 		<h2 class="reviews__title title">Отзывы наших клиентов</h2>
 	</div>
-	<div class="reviews__slider swiper">
-		<div class="reviews__wrapper swiper-wrapper">
-			<!-- Reviews slides go here -->
-		</div>
-		<div class="reviews__slider-pagination swiper-pagination"></div>
+	<div class="reviews__slider swiper swiper-initialized swiper-horizontal swiper-autoheight swiper-backface-hidden">
+		<div class="reviews__wrapper swiper-wrapper" style="height: 489px; transition-duration: 0ms; transform: translate3d(-1758px, 0px, 0px); transition-delay: 0ms;">
+			
+			
+			
+			
+			
+			
+		<div class="reviews__slide swiper-slide slide-reviews" data-swiper-slide-index="5" style="width: 561px; margin-right: 25px;">
+				<div class="slide-reviews__head">
+					<div class="slide-reviews__image"><img class="ibg" src="images/reviews-user-03.webp" alt="Едена Р."></div>
+					<div class="slide-reviews__title">
+						<h3>Елена Р.</h3>
+						<span>Руководитель участка</span>
+					</div>
+				</div>
+				<p>Работать с BuildGo было просто здорово. Они справились со всем эффективно, профессионально, а конечный продукт был выдающимся. Я рекомендую их услуги.</p>
+				<div class="slide-reviews__rating">★★★★★</div>
+			</div><div class="reviews__slide swiper-slide slide-reviews" data-swiper-slide-index="0" style="width: 561px; margin-right: 25px;">
+				<div class="slide-reviews__head">
+					<div class="slide-reviews__image"><img class="ibg" src="images/reviews-user-01.webp" alt="Роман Т."></div>
+					<div class="slide-reviews__title">
+						<h3>Роман Т.</h3>
+						<span>Строитель</span>
+					</div>
+				</div>
+				<p>BuildGo преобразил наше офисное пространство за пределы того, что мы себе представляли. Их команда была отзывчивой, тщательной, и проект был завершен вовремя без каких-либо проблем. В целом выдающиеся результаты!</p>
+				<div class="slide-reviews__rating">★★★★★</div>
+			</div><div class="reviews__slide swiper-slide slide-reviews swiper-slide-prev" data-swiper-slide-index="1" style="width: 561px; margin-right: 25px;">
+				<div class="slide-reviews__head">
+					<div class="slide-reviews__image"><img class="ibg" src="images/reviews-user-02.webp" alt="Дмитрий Н."></div>
+					<div class="slide-reviews__title">
+						<h3>Дмитрий Н.</h3>
+						<span>Инженер-строитель</span>
+					</div>
+				</div>
+				<p>От начала до конца BuildGo предоставил исключительный сервис. Они хорошо общались, соблюдали все сроки, а качество их работы намного превзошло наши ожидания.</p>
+				<div class="slide-reviews__rating">★★★★★</div>
+			</div><div class="reviews__slide swiper-slide slide-reviews swiper-slide-active" data-swiper-slide-index="2" style="width: 561px; margin-right: 25px;">
+				<div class="slide-reviews__head">
+					<div class="slide-reviews__image"><img class="ibg" src="images/reviews-user-03.webp" alt="Едена Р."></div>
+					<div class="slide-reviews__title">
+						<h3>Елена Р.</h3>
+						<span>Руководитель участка</span>
+					</div>
+				</div>
+				<p>Работать с BuildGo было просто здорово. Они справились со всем эффективно, профессионально, а конечный продукт был выдающимся. Я рекомендую их услуги.</p>
+				<div class="slide-reviews__rating">★★★★★</div>
+			</div><div class="reviews__slide swiper-slide slide-reviews swiper-slide-next" data-swiper-slide-index="3" style="width: 561px; margin-right: 25px;">
+				<div class="slide-reviews__head">
+					<div class="slide-reviews__image"><img class="ibg" src="images/reviews-user-01.webp" alt="Роман Т."></div>
+					<div class="slide-reviews__title">
+						<h3>Роман Т.</h3>
+						<span>Строитель</span>
+					</div>
+				</div>
+				<p>BuildGo преобразил наше офисное пространство за пределы того, что мы себе представляли. Их команда была отзывчивой, тщательной, и проект был завершен вовремя без каких-либо проблем. В целом выдающиеся результаты!</p>
+				<div class="slide-reviews__rating">★★★★★</div>
+			</div><div class="reviews__slide swiper-slide slide-reviews" data-swiper-slide-index="4" style="width: 561px; margin-right: 25px;">
+				<div class="slide-reviews__head">
+					<div class="slide-reviews__image"><img class="ibg" src="images/reviews-user-02.webp" alt="Дмитрий Н."></div>
+					<div class="slide-reviews__title">
+						<h3>Дмитрий Н.</h3>
+						<span>Инженер-строитель</span>
+					</div>
+				</div>
+				<p>От начала до конца BuildGo предоставил исключительный сервис. Они хорошо общались, соблюдали все сроки, а качество их работы намного превзошло наши ожидания.</p>
+				<div class="slide-reviews__rating">★★★★★</div>
+			</div></div>
+		<div class="reviews__slider-pagination swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal"><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet swiper-pagination-bullet-active"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span><span class="swiper-pagination-bullet"></span></div>
 	</div>
 </section>
