--- a/src/components/Stages.astro
+++ b/src/components/Stages.astro
@@ -2,7 +2,26 @@
 	<div class="stages__container">
 		<h2 class="stages__title title">Этапы Вашего Проекта с Нами</h2>
 		<ul class="stages__items">
-			<!-- Stages items go here -->
+			<li class="stages__item">
+				<span class="stages__number">01</span>
+				<h3>Первичная консультация</h3>
+				<p>Обсудите цели, бюджет и сроки проекта с нашей командой экспертов</p>
+			</li>
+			<li class="stages__item">
+				<span class="stages__number">02</span>
+				<h3>Планирование работ</h3>
+				<p>Комплексный план, включающий дизайн, материалы и графики работ</p>
+			</li>
+			<li class="stages__item">
+				<span class="stages__number">03</span>
+				<h3>Выполнение работ</h3>
+				<p>Реализация плана с помощью квалифицированных специалистов, обеспечивающих качество</p>
+			</li>
+			<li class="stages__item">
+				<span class="stages__number">04</span>
+				<h3>Заключительный обзор</h3>
+				<p>Мы решаем любые проблемы до завершения проекта.</p>
+			</li>
 		</ul>
 	</div>
 </section>
