--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -8,5 +8,5 @@
 			<a href="#" class="hero__button button _icon-arrow-up-right">Узнать больше</a>
 		</div>
 	</div>
-	<img src="/hero-img.webp" alt="Hero">
+	<!-- <img src="images/hero-img.webp" alt="Hero"> -->
 </section>
