--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import Footer from '../components/Footer.astro';
 			opacity: 0.001;
 		}
 	</style>
-	<link rel="stylesheet" href="/style.min.css">
+	<link rel="stylesheet" href="styles/style.css">
 	<link rel="shortcut icon" href="/favicon.ico">
 	<link rel="icon" href="/favicon.webp" sizes="32x32">
 	<link rel="icon" href="/favicon.webp" sizes="192x192">
@@ -55,6 +55,6 @@ import Footer from '../components/Footer.astro';
 		</main>
 		<Footer />
 	</div>
-	<script src="/app.min.js" is:inline></script>
+	<script src="app.js" is:inline></script>
 </body>
 </html>
