--- a/src/components/CTA.astro
+++ b/src/components/CTA.astro
@@ -3,10 +3,9 @@
 		<div class="cta__content">
 			<h2 class="cta__title">Начните проект своей мечты сегодня!</h2>
 			<form class="cta__form" action="#" method="POST">
-				<input type="tel" name="phone" data-error="Пожалуйста, заполните это поле." placeholder="Номер телефона" pattern="\d*" title="Вводите только цифры" class="input" data-validate required>
+				<input type="tel" name="phone" data-error="Пожалуйста, заполните это поле." placeholder="Номер телефона" pattern="\d*" title="Вводите только цыфри" class="input" data-validate="" required="">
 				<button type="submit" class="button">Оставить заявку</button>
 			</form>
 		</div>
 	</div>
-	<img src="/cta-bg.webp" alt="CTA">
 </section>
