--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -1,8 +1,72 @@
 <section class="faq">
 	<div class="faq__container">
 		<h2 class="faq__title title">Часто задаваемые вопросы</h2>
-		<div class="spollers" data-spollers data-one-spoller>
-			<!-- FAQ items go here -->
+		<div class="spollers _spoller-init" data-spollers="" data-one-spoller="">
+			<details class="spollers__item">
+				<summary class="spollers__title">Можно ли вернуть строительные материалы, если я заказал слишком много?<span></span></summary>
+				<div class="spollers__body" hidden="">
+					<p>Да, многие поставщики разрешают возврат неиспользованных строительных материалов, но правила могут быть разными. Вот что вам следует учесть:</p>
+					<ul>
+						<li><span>Проверьте правила:</span> Ознакомьтесь с политикой поставщика в отношении возврата неиспользованных материалов.</li>
+						<li><span>Срок возврата:</span> Возможно, существует ограничение по срокам возврата, поэтому действуйте быстро.</li>
+						<li><span>Состояние материалов:</span> Убедитесь, что материалы находятся в оригинальном, неиспользованном состоянии.</li>
+						<li><span>Плата за возврат:</span> Имейте в виду, что некоторые поставщики могут взимать комиссию за возврат товара.</li>
+						<li><span>Документация:</span> Сохраняйте чек на покупку и все необходимые документы для возврата.</li>
+					</ul>
+				</div>
+			</details>
+			<details class="spollers__item" data-open="" open="">
+				<summary class="spollers__title _spoller-active">Что делать, если я получил поврежденные строительные материалы?<span></span></summary>
+				<div class="spollers__body">
+					<p>На стоимость строительных материалов может влиять несколько факторов, в том числе:</p>
+					<ul>
+						<li><span>Спрос и предложение:</span> Колебания спроса или дефицит предложения могут привести к росту цен.</li>
+						<li><span>Тип материала:</span> Различные материалы имеют разную стоимость в зависимости от качества и доступности.</li>
+						<li><span>Местонахождение:</span> Транспортные расходы могут варьироваться в зависимости от расстояния, на которое необходимо доставить
+							материалы.</li>
+						<li><span>Сезонность:</span> Некоторые материалы могут быть дешевле в непиковые сезоны.</li>
+					</ul>
+				</div>
+			</details>
+			<details class="spollers__item">
+				<summary class="spollers__title">Существуют ли экологически чистые варианты строительных материалов?<span></span></summary>
+				<div class="spollers__body" hidden="">
+					<p>На стоимость строительных материалов может влиять несколько факторов, в том числе:</p>
+					<ul>
+						<li><span>Спрос и предложение:</span> Колебания спроса или дефицит предложения могут привести к росту цен.</li>
+						<li><span>Тип материала:</span> Различные материалы имеют разную стоимость в зависимости от качества и доступности.</li>
+						<li><span>Местонахождение:</span> Транспортные расходы могут варьироваться в зависимости от расстояния, на которое необходимо доставить
+							материалы.</li>
+						<li><span>Сезонность:</span> Некоторые материалы могут быть дешевле в непиковые сезоны.</li>
+					</ul>
+				</div>
+			</details>
+			<details class="spollers__item">
+				<summary class="spollers__title">Как подготовиться к доставке строительных материалов?<span></span></summary>
+				<div class="spollers__body" hidden="">
+					<p>На стоимость строительных материалов может влиять несколько факторов, в том числе:</p>
+					<ul>
+						<li><span>Спрос и предложение:</span> Колебания спроса или дефицит предложения могут привести к росту цен.</li>
+						<li><span>Тип материала:</span> Различные материалы имеют разную стоимость в зависимости от качества и доступности.</li>
+						<li><span>Местонахождение:</span> Транспортные расходы могут варьироваться в зависимости от расстояния, на которое необходимо доставить
+							материалы.</li>
+						<li><span>Сезонность:</span> Некоторые материалы могут быть дешевле в непиковые сезоны.</li>
+					</ul>
+				</div>
+			</details>
+			<details class="spollers__item">
+				<summary class="spollers__title">Какие факторы могут повлиять на стоимость строительных материалов?<span></span></summary>
+				<div class="spollers__body" hidden="">
+					<p>На стоимость строительных материалов может влиять несколько факторов, в том числе:</p>
+					<ul>
+						<li><span>Спрос и предложение:</span> Колебания спроса или дефицит предложения могут привести к росту цен.</li>
+						<li><span>Тип материала:</span> Различные материалы имеют разную стоимость в зависимости от качества и доступности.</li>
+						<li><span>Местонахождение:</span> Транспортные расходы могут варьироваться в зависимости от расстояния, на которое необходимо доставить
+							материалы.</li>
+						<li><span>Сезонность:</span> Некоторые материалы могут быть дешевле в непиковые сезоны.</li>
+					</ul>
+				</div>
+			</details>
 		</div>
 	</div>
 </section>
