--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="header__container">
 		<div class="header__logo">
-			<a href="/"><img src="img/logo.webp" alt="BuildGo logo"></a>
+			<a href="/"><img src="logo.webp" alt="BuildGo logo"></a>
 		</div>
 		<div class="header__menu menu">
 			<nav class="menu__body">
