fix: change astro to 2.0.0

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,6 +55,6 @@ import Footer from '../components/Footer.astro';
 		</main>
 		<Footer />
 	</div>
-	<script src="app.js" is:inline></script>
+	<!-- <script src="app.js" is:inline></script> -->
 </body>
 </html>
